# myPathTracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bvh.cpp  bvh.h  light.cpp  light.h  main.cpp  myPathTracer.cpp  myPathTracer.h  pathtracer.cpp  pathtracer.h  primitive.cpp  primitive.h  raytrace.cpp  raytrace.h  scene.cpp  scene.h
include/: progressbar.hpp
